second screen - features

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <h1 class="title">Login</h1>
             <a href="#"><p class="buttons">usuário</p></a>
             <a href="#"><p class="buttons">senha</p></a>
-            <a href="#"><p class="password-recovery">esqueceu sua senha?</p></a>
+            <a href="#"><p class="password-recovery">Esqueceu sua senha?</p></a>
             <a href="#"><p class="login">Login</p></a>
         </div>
     </section>
