--- a/menu.html
+++ b/menu.html
@@ -18,44 +18,124 @@
         <section class="lateral-menu">
             <div class="circle">
                 <div class="clipboard">
-                    <img src="/portaguard/assets/img/prancheta 2.svg" alt="Imagem da prancheta">
+                    <img src="/portaguard/assets/img/prancheta.svg" alt="Imagem da prancheta">
                 </div>
             </div>
             <div class="options">
                 <nav>
-                    <div class="edge"><a href="#">
-                            <p>
-                                <div class="circle-image"><img class="image-icon"
-                                        src="/portaguard/assets/img/usuario-final 1.svg"
-                                        alt="imagem ilustrativa dos usuarios"></div>Controle de Visitantes
-                            </p>
-                        </a></div>
-                        <div class="edge"><a href="#">
-                        <p>
-                            <div class="circle-image"><img class="image-icon" src="/portaguard/assets/img/nota 2.svg"
-                                    alt="imagem ilustrativa das notas fiscais"></div>Controle de Notas Fiscais
-                        </p>
-                    </a></div>
-                    <div class="edge"><a href="#">
-                        <p>
-                            <div class="circle-image"><img class="image-icon" src="/portaguard/assets/img/pasta 1.svg"
-                                    alt="imagem ilustrativa de uma pasta de arquivos"></div>Consulta de Dados
-                        </p>
-                    </a></div>
-                    <div class="edge"><a href="#">
-                        <p>
-                            <div class="circle-image"><img class="image-icon"
-                                    src="/portaguard/assets/img/definicoes (1) 1.svg"
-                                    alt="imagem ilustrativa de um usuario adm "></div> Área do Adm
-                        </p>
-                    </a></div>
-                    <div class="last-edge"><a href="#">
-                        <p>
-                            <div class="circle-image"><img class="image-icon"
-                                    src="/portaguard\assets\img\sair (1) 2.svg"
-                                    alt="imagem ilustrativa indicando Logout "></div>Logout
-                        </p>
-                    </a></div>
+                    <!-- Visible part ✅ -->
+                    <div class="control-visitantes-link">
+                        <div class="edge"><a href="#" class="visible-text">
+                                <p>
+                                    <div class="circle-image"><img class="image-icon"
+                                            src="/portaguard/assets/img/usuario-final.svg"
+                                            alt="imagem ilustrativa dos usuarios"></div>Controle de Visitantes
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Hidden part ❌ -->
+                    <div id="hidden-section-1" class="hidden-section">
+                        <div class="edge"><a href="#" class="hidden-text">
+                                <p>
+                                    <div class="hidden-circle-image"><img class="hidden-image-icon"
+                                            src="/portaguard/assets/img/entrada-visitante.svg"
+                                            alt="imagem ilustrativa da entrada de visitante"></div>Entrada de Visitante
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Hidden part ❌ -->
+                    <div id="hidden-section-2" class="hidden-section">
+                        <div class="edge"><a href="#" class="hidden-text">
+                                <p>
+                                    <div class="hidden-circle-image"><img class="hidden-image-icon"
+                                            src="/portaguard/assets/img/saida-visitante.svg"
+                                            alt="imagem ilustrativa da saída de visitante"></div>Saída de Visitante
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Visible part ✅ -->
+                    <div class="control-notas-link">
+                        <div class="edge"><a href="#" class="visible-text">
+                                <p>
+                                    <div class="circle-image"><img class="image-icon"
+                                            src="/portaguard/assets/img/nota.svg"
+                                            alt="imagem ilustrativa das notas fiscais"></div>Controle de Notas Fiscais
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Hidden part ❌ -->
+                    <div id="hidden-section-3" class="hidden-section">
+                        <div class="edge"><a href="#" class="hidden-text">
+                                <p>
+                                    <div class="hidden-circle-image"><img class="hidden-image-icon"
+                                            src="/portaguard/assets/img/documentos.svg"
+                                            alt="imagem ilustrativa da saída / entrada de notas"></div>Entrada / Saída
+                                    de
+                                    Notas
+                                    Fiscais
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Visible part ✅ -->
+                    <div class="consulta-dados-link">
+                        <div class="edge"><a href="#" class="visible-text">
+                                <p>
+                                    <div class="circle-image"><img class="image-icon"
+                                            src="/portaguard/assets/img/pasta.svg"
+                                            alt="imagem ilustrativa de uma pasta de arquivos"></div>Consulta de Dados
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Hidden part ❌ -->
+                    <div id="hidden-section-4" class="hidden-section">
+                        <div class="edge"><a href="#" class="hidden-text">
+                                <p>
+                                    <div class="hidden-circle-image"><img class="hidden-image-icon"
+                                            src="/portaguard/assets/img/banco-de-dados.svg"
+                                            alt="imagem ilustrativa de um banco de dados"></div>Banco de Dados
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Visible part ✅ -->
+                    <div class="area-adm-link">
+                        <div class="edge"><a href="#" class="visible-text">
+                                <p>
+                                    <div class="circle-image"><img class="image-icon"
+                                            src="/portaguard/assets/img/definicoes.svg"
+                                            alt="imagem ilustrativa de um usuario adm "></div> Área do Adm
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Hidden part ❌ -->
+                    <div id="hidden-section-5" class="hidden-section">
+                        <div class="edge"><a href="#" class="hidden-text">
+                                <p>
+                                    <div class="hidden-circle-image"><img class="hidden-image-icon"
+                                            src="/portaguard/assets/img/gerenciamento-de-usuarios.svg"
+                                            alt="imagem ilustrativa do gerenciamento de usuarios"></div>Gerenciamento de
+                                    Usuarios
+                                </p>
+                            </a></div>
+                    </div>
+
+                    <!-- Visible part ✅ -->
+                    <div class="visible-section">
+                        <div class="last-edge"><a href="#" class="visible-text">
+                                <p>
+                                    <div class="circle-image"><img class="image-icon"
+                                            src="/portaguard\assets\img\sair.svg"
+                                            alt="imagem ilustrativa indicando Logout "></div>Logout
+                                </p>
+                            </a></div>
+                    </div>
                 </nav>
             </div>
         </section>
@@ -63,6 +143,8 @@
             <img src="/portaguard\assets\img\logo.svg" alt="logo da portaguard">
         </section>
     </section>
+
+    <script src="menu.js"></script>
 </body>
 
 </html>
